@@ -4,8 +4,10 @@ import com.fashion_e_commerce.Order.Entities.Order;
 import com.fashion_e_commerce.Order.Services.OrderService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.server.ResponseStatusException;
 
@@ -14,11 +16,10 @@ import java.util.*;
 @Slf4j
 @RestController
 @RequestMapping("/api/payment")
+@CrossOrigin
 public class PaymentController {
 
     private final OrderService orderService;
-    private final WebClient webClient;
-
     @Value("${sslcommerz.storeId}")
     private String storeId;
 
@@ -37,133 +38,91 @@ public class PaymentController {
     @Value("${sslcommerz.cancelUrl}")
     private String cancelUrl;
 
-    public PaymentController(OrderService orderService, WebClient.Builder webClientBuilder) {
+    public PaymentController(OrderService orderService) {
         this.orderService = orderService;
-        this.webClient = webClientBuilder.baseUrl(baseUrl).build();
     }
 
     @PostMapping("/initiate")
-    public ResponseEntity<?> initiatePayment(@RequestParam Long orderId) {
-        log.info("Initiating payment for orderId: {}", orderId);
-
-        // Fetch order details
-        Order order = orderService.getOrderById(orderId);
-        if (order == null || order.getTotalPrice() <= 0) {
-            log.error("Invalid order details for orderId: {}", orderId);
-            throw new ResponseStatusException(
-                    org.springframework.http.HttpStatus.BAD_REQUEST,
-                    "Invalid order or missing payment details."
-            );
+    public ResponseEntity<Map<String, String>> initiatePayment(@RequestParam Long orderId) {
+        if (orderId == null || orderId <= 0) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid order ID");
         }
 
-        // Prepare payment request payload
-        Map<String, String> paymentRequest = new HashMap<>();
-        paymentRequest.put("store_id", storeId);
-        paymentRequest.put("store_passwd", storePassword);
-        paymentRequest.put("total_amount", String.valueOf(order.getTotalPrice()));
-        paymentRequest.put("currency", "BDT");
-        paymentRequest.put("tran_id", "ORDER_" + orderId);
-        paymentRequest.put("success_url", successUrl);
-        paymentRequest.put("fail_url", failUrl);
-        paymentRequest.put("cancel_url", cancelUrl);
-        paymentRequest.put("cus_name", order.getUser().getFullname());
-        paymentRequest.put("cus_email", order.getUser().getEmail());
-        paymentRequest.put("cus_add1", order.getShippingAddress());
-        paymentRequest.put("cus_phone", order.getContactInfo());
-        paymentRequest.put("product_name", "Order_" + orderId);
+        Order order = orderService.getOrderById(orderId);
 
-        log.info("Payment request payload: {}", paymentRequest);
+        // Prepare data for SSLCommerz
+        Map<String, String> paymentData = new HashMap<>();
+        paymentData.put("store_id", storeId);
+        paymentData.put("store_passwd", storePassword);
+        paymentData.put("total_amount", String.valueOf(order.getTotalPrice()));
+        paymentData.put("currency", "BDT");
+        paymentData.put("tran_id", "ORDER_" + order.getId());
+        paymentData.put("success_url", "http://your-domain.com/api/payment/success");
+        paymentData.put("fail_url", "http://your-domain.com/api/payment/fail");
+        paymentData.put("cancel_url", "http://your-domain.com/api/payment/cancel");
 
-        try {
-            // Make HTTP request to SSLCommerz
-            Map<String, Object> response = webClient
-                    .post()
-                    .uri("/gwprocess/v4/api.php")
-                    .bodyValue(paymentRequest)
-                    .retrieve()
-                    .bodyToMono(Map.class)
-                    .block();
+        paymentData.put("cus_name", order.getUser().getFullname());
+        paymentData.put("cus_email", order.getUser().getEmail());
+        paymentData.put("cus_phone", order.getContactInfo());
+        paymentData.put("cus_add1", order.getShippingAddress());
 
-            log.info("Payment response: {}", response);
+        paymentData.put("shipping_method", "Courier");
+        paymentData.put("product_name", "E-Commerce Items");
+        paymentData.put("product_category", "General");
+        paymentData.put("product_profile", "general");
 
-            // Validate the response from SSLCommerz
-            if (response != null && "SUCCESS".equalsIgnoreCase((String) response.get("status"))) {
-                return ResponseEntity.ok(response);
-            } else {
-                log.error("Payment initiation failed: {}", response);
-                return ResponseEntity.badRequest().body(Map.of("error", "Failed to initiate payment."));
-            }
-        } catch (Exception e) {
-            log.error("Error initiating payment: {}", e.getMessage());
-            return ResponseEntity.status(org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", "Payment initiation failed."));
+        // Send request to SSLCommerz
+        RestTemplate restTemplate = new RestTemplate();
+        ResponseEntity<Map> response = restTemplate.postForEntity(
+                "https://securepay.sslcommerz.com/gwprocess/v3/api.php",
+                paymentData, Map.class
+        );
+
+        Map<String, String> responseBody = (Map<String, String>) response.getBody();
+        String gatewayPageURL = responseBody.get("GatewayPageURL");
+
+        if (gatewayPageURL != null) {
+            return ResponseEntity.ok(Collections.singletonMap("GatewayPageURL", gatewayPageURL));
+        } else {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Collections.singletonMap("error", "Failed to initiate payment."));
         }
     }
 
     @PostMapping("/success")
-    public ResponseEntity<String> handleSuccess(@RequestParam Map<String, String> params) {
-        log.info("Payment success callback received with params: {}", params);
+    public ResponseEntity<String> handlePaymentSuccess(@RequestBody Map<String, String> request) {
+        String tranId = request.get("tran_id");
+        Order order = orderService.getOrderById(Long.parseLong(tranId.replace("ORDER_", "")));
 
-        String transactionId = params.get("tran_id");
-        String status = params.get("status");
+        // Update order status to Paid
+        order.setStatus("Paid");
+        orderService.updateOrderStatus(order.getId(), "Paid");
 
-        if ("VALID".equals(status)) {
-            try {
-                Long orderId = Long.parseLong(transactionId.split("_")[1]);
-                orderService.updateOrderStatus(orderId, "Paid");
-                log.info("Order {} marked as Paid.", orderId);
-                return ResponseEntity.ok("Payment Successful!");
-            } catch (Exception e) {
-                log.error("Error updating payment status: {}", e.getMessage());
-                return ResponseEntity.status(org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body("Payment validation failed!");
-            }
-        }
-        return ResponseEntity.badRequest().body("Invalid Payment");
+        return ResponseEntity.ok("Payment successful!");
     }
 
     @PostMapping("/fail")
-    public ResponseEntity<String> handleFail(@RequestParam Map<String, String> params) {
-        log.warn("Payment failed with params: {}", params);
-        return ResponseEntity.badRequest().body("Payment Failed");
+    public ResponseEntity<String> handlePaymentFailure(@RequestBody Map<String, String> request) {
+        String tranId = request.get("tran_id");
+        Order order = orderService.getOrderById(Long.parseLong(tranId.replace("ORDER_", "")));
+
+        // Update order status to Payment Failed
+        order.setStatus("Payment Failed");
+        orderService.updateOrderStatus(order.getId(), "Payment Failed");
+
+        return ResponseEntity.ok("Payment failed.");
     }
 
     @PostMapping("/cancel")
-    public ResponseEntity<String> handleCancel(@RequestParam Map<String, String> params) {
-        log.warn("Payment cancelled with params: {}", params);
-        return ResponseEntity.ok("Payment Cancelled");
-    }
+    public ResponseEntity<String> handlePaymentCancel(@RequestBody Map<String, String> request) {
+        String tranId = request.get("tran_id");
+        Order order = orderService.getOrderById(Long.parseLong(tranId.replace("ORDER_", "")));
 
-    @PostMapping("/validate")
-    public ResponseEntity<?> validatePayment(@RequestParam String transactionId) {
-        log.info("Validating payment for transactionId: {}", transactionId);
+        // Update order status to Cancelled
+        order.setStatus("Cancelled");
+        orderService.updateOrderStatus(order.getId(), "Cancelled");
 
-        String validationUrl = baseUrl + "/validator/api/validationserverAPI.php";
-        Map<String, String> params = Map.of(
-                "store_id", storeId,
-                "store_passwd", storePassword,
-                "tran_id", transactionId
-        );
-
-        try {
-            Map<String, Object> response = webClient
-                    .get()
-                    .uri(uriBuilder -> uriBuilder.path("/validator/api/validationserverAPI.php")
-                            .queryParam("store_id", storeId)
-                            .queryParam("store_passwd", storePassword)
-                            .queryParam("tran_id", transactionId)
-                            .build())
-                    .retrieve()
-                    .bodyToMono(Map.class)
-                    .block();
-
-            log.info("Validation response: {}", response);
-            return ResponseEntity.ok(response);
-        } catch (Exception e) {
-            log.error("Error validating payment: {}", e.getMessage());
-            return ResponseEntity.status(org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", "Payment validation failed."));
-        }
+        return ResponseEntity.ok("Payment cancelled.");
     }
 }
 /*
